# autostepper

./: .gitignore  LICENSE  README.md  README_YOUTUBE.md  autostepper.py  demo.py  download_demo.py  package_song.py  quick_download.py  requirements.txt  test_mvp.py  youtube_to_stepmania.py
autostepper/: __init__.py
autostepper/audio/: analyzer.py
autostepper/formats/: __init__.py  stepmania.py  stepmania_ssc.py
autostepper/stepgen/: __init__.py  generator.py
infrastructure/: README.md  deploy.sh
infrastructure/lambda/: Dockerfile  handler.py  requirements.txt
infrastructure/local/: server.py
infrastructure/terraform/: lambda.tf  main.tf  s3.tf  variables.tf
web/: .env.example  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
web/src/: app.css
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: lib.rs  main.rs
web/src/lib/api/: lambda.ts  youtube.ts
web/src/lib/audio/: analyzer.ts  audioService.ts
web/src/lib/charts/: generator.ts
web/src/lib/components/: AddSongModal.svelte  SongCard.svelte
web/src/lib/formats/: ssc.ts  zip.ts
web/src/lib/game/: engine.ts  input.ts  renderer.ts  scoring.ts
web/src/lib/navigation/: context.svelte.ts  focus.ts  keyboard.ts  types.ts
web/src/lib/storage/: db.ts  library.ts  playlists.ts
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/src/routes/play/: +page.svelte
web/src/routes/play/game/: +page.svelte
web/src/routes/playlists/: +page.svelte
