[package]
name = "autostepper"
version = "0.1.0"
description = "AutoStepper - Dance game with YouTube downloads"
authors = ["AutoStepper"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "autostepper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["process", "io-util"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
url = "2"
which = "6"
base64 = "0.22"
